--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
     <p>Welcome to the chat app</p>
 
     <ol id="messages"></ol>
-    <form id="message-form" style="position: fixed; bottom: 0; left: 0; background: black; width: 100%;">
+    <form id="message-form">
       <input name="message" type="text" placeholder="Message" />
       <button>Send</button>
     </form>
+    <button id="send-location">Send location</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.2.1.min.js"></script>
